syntax = "proto3";

package multisig;

import "koinos/options.proto";

// @description Add a new signer
// @read-only false
// @result empty_object
message add_signer_arguments {
  bytes signer = 1 [(koinos.btype) = ADDRESS];
}

// @description Remove a new signer
// @read-only false
// @result empty_object
message remove_signer_arguments {
  bytes signer = 1 [(koinos.btype) = ADDRESS];
}

// @description Get authorized signers
// @read-only true
message get_signers_arguments {
}

message get_signers_result {
  repeated bytes authorized_signers = 1 [(koinos.btype) = ADDRESS];
}

// Objects
message empty_object {

}

message metadata_object {
  uint32 number_authorized_signers = 1;
}